--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "chart.js": "^2.9.4",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
-    "vue-axios": "^3.1.1",
+    "vue-axios": "^3.2.0",
     "vue-chartjs": "^3.5.1",
-    "vue-router": "^3.4.7"
+    "vue-router": "^3.4.7",
+    "vuelidate": "^0.7.6"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
