--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "axios": "^0.20.0",
+    "@vue/compiler-sfc": "^3.0.0",
+    "axios": "^0.21.1",
     "bootstrap": "^4.5.3",
     "bootstrap-vue": "^2.18.0",
     "chart.js": "^2.9.4",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11",
-    "vue-axios": "^3.2.0",
+    "jquery": "^3.5.1",
+    "laravel-echo": "^1.10.0",
+    "vue": "^2.6.12",
+    "vue-axios": "^3.2.2",
     "vue-chartjs": "^3.5.1",
     "vue-router": "^3.4.7",
     "vuelidate": "^0.7.6"
@@ -26,6 +29,9 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "pusher-js": "^7.0.2",
+    "sass": "^1.32.2",
+    "sass-loader": "^10.1.0",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
